targets/sol/k3s/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-ratelimit
  namespace: apps
spec:
  rateLimit:
    average: 25
    burst: 50
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tv.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
        - name: jellyfin-ratelimit
          namespace: apps
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-prod-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress-lan # For initial setup when behind Authelia (external URL won't work)
  namespace: apps
spec:
  entryPoints:
    - websecure
  tls:
    secretName: jellyfin-localhost-tls
  routes:
    - match: Host(`tv.localhost`)
      kind: Rule
      middlewares:
        - name: lan-whitelist
          namespace: base
        - name: forwardauth-authelia # IGNORE INITIALLY
          namespace: base # IGNORE INITIALLY
      services: # Above Authelia middleware fails, effectively blocking this route after initial mode
        - name: jellyfin
          port: 8096
